# badcc

./: Cargo.toml  test_compiler
src/: .parser.rs.pending-snap  assembly_gen.rs  ast.rs  code_emission.rs  lexer.rs  located.rs  main.rs  parser.rs  sema.rs  tacky.rs
src/sema/: duplicate_cases.rs  loop_labels.rs  resolve_variables.rs  statement_labels.rs  type_check.rs
test_outputs/tests/chapter_1/invalid_lex/at_sign.c/: error.txt
test_outputs/tests/chapter_1/invalid_lex/backslash.c/: error.txt
test_outputs/tests/chapter_1/invalid_lex/backtick.c/: error.txt
test_outputs/tests/chapter_1/invalid_lex/invalid_identifier.c/: error.txt
test_outputs/tests/chapter_1/invalid_lex/invalid_identifier_2.c/: error.txt
test_outputs/tests/chapter_1/invalid_parse/end_before_expr.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/extra_junk.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/invalid_function_name.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/keyword_wrong_case.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/missing_type.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/misspelled_keyword.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/no_semicolon.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/not_expression.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/space_in_keyword.c/: error.txt  tokens
test_outputs/tests/chapter_1/invalid_parse/switched_parens.c/: error.txt  tokens
tests/: integration.rs
(+3205 files in other folders)
