[package]
name = "badcc"
version = "0.1.0"
edition = "2024"

[dependencies]
camino = "1.1.10"
clap = { version = "4.5.42", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.11.1"
winnow = "0.7.12"

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
assert_fs = { version = "1.1.3", features = ["color-auto"] }
insta = "1.43.1"
predicates = "3.1.3"
